# Automated-weather-etl-pipeline

./: README.md  pyproject.toml
dags/: etlweather.py
